--- a/src/main/webapp/template/image.html
+++ b/src/main/webapp/template/image.html
@@ -31,7 +31,10 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#">upemgur</a>
+          <a class="navbar-brand brand-logo">
+            <img alt="upemgur" src="images/logo.png">
+          </a>
+          <a id="logo-name" class="navbar-brand" href="#"><span class="black-text">upem</span>gur</a>
         </div>
 
         <!-- Collect the nav links, forms, and other content for toggling -->
@@ -51,7 +54,7 @@
       </div>
     </nav>
     <div class="image-holder">
-      <img alt="Image 1" src="images/sample/1.jpg" height="470ox"/>
+      <img alt="Image 1" src="images/sample/1.jpg" height="470px"/>
     </div>
     <div class="container">
       <div class="row">
