--- a/src/main/webapp/template/user.html
+++ b/src/main/webapp/template/user.html
@@ -59,49 +59,59 @@
       </div>
     </nav>
     <div class="container">
-      <div class="page-header">
-        <h1>Dernières images</h1>
-      </div>
-        <div class="image-container">
-          <a href="image.html">
-              <img alt="Image 1<br/>par <a href='test2.html'>miguel</a>" src="images/sample/1.jpg"/>
-          </a>
-          <a href="image.html">
-              <img alt="Title 1" src="images/sample/2.jpg"/>
-          </a>
-          <a href="image.html">
-              <img alt="Title 1" src="images/sample/3.jpg"/>
-          </a>
-          <a href="images/sample/4.jpg">
-              <img alt="Title 1" src="images/sample/4.jpg"/>
-          </a>
-          <a href="images/sample/5.jpg">
-              <img alt="Title 1" src="images/sample/5.jpg"/>
-          </a>
-          <a href="images/sample/6.jpg">
-              <img alt="Title 1" src="images/sample/6.jpg"/>
-          </a>
-          <a href="images/sample/7.jpg">
-              <img alt="Title 1" src="images/sample/7.jpg"/>
-          </a>
-          <a href="images/sample/8.jpg">
-              <img alt="Title 1" src="images/sample/8.jpg"/>
-          </a>
-          <a href="images/sample/9.jpg">
-              <img alt="Title 1" src="images/sample/9.jpg"/>
-          </a>
-          <a href="images/sample/1.jpg">
-              <img alt="Title 1" src="images/sample/1.jpg"/>
-          </a>
-          <a href="images/sample/2.jpg">
-              <img alt="Title 1" src="images/sample/2.jpg"/>
-          </a>
-          <a href="images/sample/3.jpg">
-              <img alt="Title 1" src="images/sample/3.jpg"/>
-          </a>
-          <a href="images/sample/4.jpg">
-              <img alt="Title 1" src="images/sample/4.jpg"/>
-          </a>
+      <div class="row">
+        <div class="col-sm-3 sidebar">
+          <ul class="nav nav-pills nav-stacked nav-sidebar">
+            <li><h3>Miguel</h3></li>
+            <li class="nav-separator"></li>
+            <li role="presentation"><a href="#">Profil</a></li>
+            <li role="presentation" class="active"><a href="#">Images</a></li>
+            <li role="presentation"><a href="user-comments.html">Commentaires</a></li>
+          </ul>
+        </div>
+        <div class="col-sm-9 content-right">
+          <div class="image-container">
+            <a href="image.html">
+                <img alt="Image 1<br/>par <a href='test2.html'>miguel</a>" src="images/sample/1.jpg"/>
+            </a>
+            <a href="image.html">
+                <img alt="Title 1" src="images/sample/2.jpg"/>
+            </a>
+            <a href="image.html">
+                <img alt="Title 1" src="images/sample/3.jpg"/>
+            </a>
+            <a href="images/sample/4.jpg">
+                <img alt="Title 1" src="images/sample/4.jpg"/>
+            </a>
+            <a href="images/sample/5.jpg">
+                <img alt="Title 1" src="images/sample/5.jpg"/>
+            </a>
+            <a href="images/sample/6.jpg">
+                <img alt="Title 1" src="images/sample/6.jpg"/>
+            </a>
+            <a href="images/sample/7.jpg">
+                <img alt="Title 1" src="images/sample/7.jpg"/>
+            </a>
+            <a href="images/sample/8.jpg">
+                <img alt="Title 1" src="images/sample/8.jpg"/>
+            </a>
+            <a href="images/sample/9.jpg">
+                <img alt="Title 1" src="images/sample/9.jpg"/>
+            </a>
+            <a href="images/sample/1.jpg">
+                <img alt="Title 1" src="images/sample/1.jpg"/>
+            </a>
+            <a href="images/sample/10.jpg">
+                <img alt="Title 1" src="images/sample/10.jpg"/>
+            </a>
+            <a href="images/sample/3.jpg">
+                <img alt="Title 1" src="images/sample/3.jpg"/>
+            </a>
+            <a href="images/sample/4.jpg">
+                <img alt="Title 1" src="images/sample/4.jpg"/>
+            </a>
+        </div>
+        </div>
       </div>
     </div>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
