--- a/src/main/webapp/template/index.html
+++ b/src/main/webapp/template/index.html
@@ -6,7 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Bootstrap 101 Template</title>
 
-    <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/justifiedGallery.min.css">
     <script src="js/jquery-1.11.2.min.js"></script>
     <script src="js/jquery.justifiedGallery.min.js"></script>
@@ -14,6 +13,7 @@
 
     <!-- Bootstrap -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="css/style.css">
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -32,7 +32,10 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#">upemgur</a>
+          <a class="navbar-brand brand-logo">
+            <img alt="upemgur" src="images/logo.png">
+          </a>
+          <a id="logo-name" class="navbar-brand" href="#"><span class="black-text">upem</span>gur</a>
         </div>
 
         <!-- Collect the nav links, forms, and other content for toggling -->
