--- a/src/main/webapp/template/css/style.css
+++ b/src/main/webapp/template/css/style.css
@@ -51,16 +51,6 @@
 	padding: 8px;
 }
 
-.black-text {
-	color: black;
-}
-
-#logo-name {
-	font-family: "Typo Grotesk";
-	color: white;
-	font-size: 24px;
-}
-
 .image-holder {
 	text-align: center;
 	background-color: #212124;
@@ -74,10 +64,10 @@
 
 
 .sidebar {
-	background-color: #f5f5f5;
-	border-radius: 4px;
+	/*background-color: #f5f5f5;*/
+	/*border-radius: 4px;*/
 	margin-top: 20px;
-	padding-bottom: 10px;
+	/*padding-bottom: 10px;*/
 }
 
 .content-right {
@@ -89,6 +79,25 @@
 	height: 2px;
 	border-bottom: 1px solid white;
 }
+
+body {
+	background-color: #f1f4f9;
+}
+
+.content {
+	background-color: white;
+	padding-bottom: 30px;
+}
+
+.panel-default {
+	background-color: #f1f4f9;
+}
+
+.custom-title {
+	margin-top: 0;
+	margin-bottom: 20px;
+}
+
 /*body {
 	margin: 0;
 	padding: 0;
