--- a/src/main/webapp/template/image.html
+++ b/src/main/webapp/template/image.html
@@ -34,7 +34,6 @@
           <a class="navbar-brand brand-logo">
             <img alt="upemgur" src="images/logo.png">
           </a>
-          <a id="logo-name" class="navbar-brand" href="#"><span class="black-text">upem</span>gur</a>
         </div>
 
         <!-- Collect the nav links, forms, and other content for toggling -->
@@ -56,7 +55,7 @@
     <div class="image-holder">
       <img alt="Image 1" src="images/sample/1.jpg" height="470px"/>
     </div>
-    <div class="container">
+    <div class="container content">
       <div class="row">
         <div class="col-sm-8">
           <h1>Titre de l'image</h1>
