--- a/src/main/webapp/template/parametres.html
+++ b/src/main/webapp/template/parametres.html
@@ -61,68 +61,25 @@
       <div class="row">
         <div class="col-sm-3 sidebar">
           <ul class="nav nav-pills nav-stacked nav-sidebar">
-            <li><h3>Miguel</h3></li>
-            <li class="nav-separator"></li>
-            <li role="presentation"><a href="#">Profil</a></li>
-            <li role="presentation" class="active"><a href="#">Images</a></li>
-            <li role="presentation"><a href="user-comments.html">Commentaires</a></li>
+            <li role="presentation" class="active"><a href="#">Compte</a></li>
+            <li role="presentation"><a href="#">Mot de passe</a></li>
           </ul>
         </div>
-        <div class="col-sm-9 content-right">
-          <div class="image-container">
-            <a href="image.html">
-                <img alt="Image 1<br/>par <a href='test2.html'>miguel</a>" src="images/sample/1.jpg"/>
-            </a>
-            <a href="image.html">
-                <img alt="Title 1" src="images/sample/2.jpg"/>
-            </a>
-            <a href="image.html">
-                <img alt="Title 1" src="images/sample/3.jpg"/>
-            </a>
-            <a href="images/sample/4.jpg">
-                <img alt="Title 1" src="images/sample/4.jpg"/>
-            </a>
-            <a href="images/sample/5.jpg">
-                <img alt="Title 1" src="images/sample/5.jpg"/>
-            </a>
-            <a href="images/sample/6.jpg">
-                <img alt="Title 1" src="images/sample/6.jpg"/>
-            </a>
-            <a href="images/sample/7.jpg">
-                <img alt="Title 1" src="images/sample/7.jpg"/>
-            </a>
-            <a href="images/sample/8.jpg">
-                <img alt="Title 1" src="images/sample/8.jpg"/>
-            </a>
-            <a href="images/sample/9.jpg">
-                <img alt="Title 1" src="images/sample/9.jpg"/>
-            </a>
-            <a href="images/sample/1.jpg">
-                <img alt="Title 1" src="images/sample/1.jpg"/>
-            </a>
-            <a href="images/sample/10.jpg">
-                <img alt="Title 1" src="images/sample/10.jpg"/>
-            </a>
-            <a href="images/sample/3.jpg">
-                <img alt="Title 1" src="images/sample/3.jpg"/>
-            </a>
-            <a href="images/sample/4.jpg">
-                <img alt="Title 1" src="images/sample/4.jpg"/>
-            </a>
-          </div>
-
-          <nav class="text-center">
-            <ul class="pagination">
-              <li class="disabled"><a href="#" aria-label="Previous"><span aria-hidden="true">&laquo;</span></a></li>
-              <li class="active"><a href="#">1</span></a></li>
-              <li><a href="#">2</span></a></li>
-              <li><a href="#">3</span></a></li>
-              <li><a href="#">4</span></a></li>
-              <li><a href="#">5</span></a></li>
-              <li><a href="#" aria-label="Next"><span aria-hidden="true">&raquo;</span></a></li>
-            </ul>
-          </nav>
-
+        <div class="col-sm-5 content-right">
+          <h2 class="custom-title">Compte</h2>
+          <form>
+            <div class="form-group">
+              <label for="inputEmail">Email</label>
+              <input type="email" class="form-control" id="inputEmail" value="current.email@test.fr">
+            </div>
+            <div class="form-group">
+              <label for="inputPseudo">Pseudo</label>
+              <input type="text" class="form-control" id="inputPseudo" value="CurrentPseudo">
+            </div>
+            <button type="submit" class="btn btn-primary">Sauvegarder</button>
+          </form>
+          <br/>
+          <a href="#">Supprimer mon compte</a>
         </div>
       </div>
     </div>
