--- a/src/main/webapp/template/user-comments.html
+++ b/src/main/webapp/template/user-comments.html
@@ -35,7 +35,6 @@
           <a class="navbar-brand brand-logo">
             <img alt="upemgur" src="images/logo.png">
           </a>
-          <a id="logo-name" class="navbar-brand" href="#"><span class="black-text">upem</span>gur</a>
         </div>
 
         <!-- Collect the nav links, forms, and other content for toggling -->
@@ -58,7 +57,7 @@
         </div>
       </div>
     </nav>
-    <div class="container">
+    <div class="container content">
       <div class="row">
         <div class="col-sm-3 sidebar">
           <ul class="nav nav-pills nav-stacked nav-sidebar">
@@ -118,6 +117,18 @@
               </div>
             </div>
           </div>
+
+          <nav class="text-center">
+            <ul class="pagination">
+              <li class="disabled"><a href="#" aria-label="Previous"><span aria-hidden="true">&laquo;</span></a></li>
+              <li class="active"><a href="#">1</span></a></li>
+              <li><a href="#">2</span></a></li>
+              <li><a href="#">3</span></a></li>
+              <li><a href="#">4</span></a></li>
+              <li><a href="#">5</span></a></li>
+              <li><a href="#" aria-label="Next"><span aria-hidden="true">&raquo;</span></a></li>
+            </ul>
+          </nav>
 
         </div>
       </div>
