--- a/src/main/webapp/template/css/style.css
+++ b/src/main/webapp/template/css/style.css
@@ -3,12 +3,12 @@
     background-color: #00a1d7;
     border-width: 0px;
     border-radius: 0px;
-    font-family: "Open sans";
-    font-size: 16px;
+    /*font-family: "Open sans";*/
+    /*font-size: 16px;*/
     margin-bottom: 0;
 }
 .navbar-default .navbar-nav>li>a {
-    color: #f0f0f0;
+    color: white;
 }
 .navbar-default .navbar-nav>li>a:hover,
 .navbar-default .navbar-nav>li>a:focus {
