--- a/src/main/webapp/resources/css/style.css
+++ b/src/main/webapp/resources/css/style.css
@@ -98,6 +98,12 @@ body {
 	margin-bottom: 20px;
 }
 
+.error-message {
+    color: #d9534f;
+    font-style: italic;
+    font-size: 12px;
+}
+
 /*body {
 	margin: 0;
 	padding: 0;
