--- a/src/main/webapp/template/css/style.css
+++ b/src/main/webapp/template/css/style.css
@@ -98,6 +98,18 @@ body {
 	margin-bottom: 20px;
 }
 
+.clickable, .clickable:hover {
+	cursor: pointer;
+	text-decoration: none;
+	margin-right: 10px;	
+}
+
+.admin-index {
+	width: 300px;
+	margin: 0 auto;
+	margin-top: 80px;
+}
+
 /*body {
 	margin: 0;
 	padding: 0;
