--- a/src/main/webapp/template/index.html
+++ b/src/main/webapp/template/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Bootstrap 101 Template</title>
 
+    <link rel="icon" type="image/png" href="images/icon.png" />
     <link rel="stylesheet" href="css/justifiedGallery.min.css">
     <script src="js/jquery-1.11.2.min.js"></script>
     <script src="js/jquery.justifiedGallery.min.js"></script>
