--- a/src/main/webapp/resources/css/style.css
+++ b/src/main/webapp/resources/css/style.css
@@ -114,6 +114,18 @@ body {
     opacity: 0.7;
 }
 
+.clickable, .clickable:hover {
+	cursor: pointer;
+	text-decoration: none;
+	margin-right: 10px;	
+}
+
+.admin-index {
+	width: 300px;
+	margin: 0 auto;
+	margin-top: 80px;
+}
+
 /*body {
 	margin: 0;
 	padding: 0;
